# morpion_ia

./: .gitignore  CMakeLists.txt  README.md
include/game/: AI.hpp  Player.hpp  board.hpp  human.hpp
src/: main.cpp
src/game/: AI.cpp  Player.cpp  board.cpp  human.cpp
